# TMA4280_Project_1

./: .gitignore  README.md
output/: errorMach.txt  errorZeta.txt
src/: CMakeLists.txt  main.cpp  plottingFile.py  utils.cpp  utils.hpp
src/mach0/: serialMach.cpp  serialMach.hpp
src/mach1/: MPIMach.cpp  MPIMach.hpp
src/mach2/: MPIMach2.cpp  MPIMach2.hpp
src/mach3/: ompMach.cpp  ompMach.hpp
src/mach4/: hybridMach.cpp  hybridMach.hpp
src/zeta0/: serialZeta.cpp  serialZeta.hpp
src/zeta1/: MPIZeta.cpp  MPIZeta.hpp
src/zeta2/: MPIZeta2.cpp  MPIZeta2.hpp
src/zeta3/: ompZeta.cpp  ompZeta.hpp
src/zeta4/: hybridZeta.cpp  hybridZeta.hpp
